--- a/test/problems/add/add.tex
+++ b/test/problems/add/add.tex
@@ -39,7 +39,7 @@ the answer is 1048575 if $x=1048576$ and $y=-1$.
 \textbf{\large Input Format}
 
 The input is terminated by end-of-file, and there are at most 30 test cases.
-Each test case is a line consisting of two integers $x$ and $y$ saparated by
+Each test case is a line consisting of two integers $x$ and $y$ separated by
 a blank. You may assume that $-10^{18}\le x \le 10^{18}$ and 
 $-10^{18}\le y \le 10^{18}$.
 
