--- a/test/problems/lis/lis.tex
+++ b/test/problems/lis/lis.tex
@@ -54,7 +54,7 @@ of \verb+2,1,3,4,5+.
 The input is terminated by end-of-file, and there are at most 30 test cases.
 Each test case consists of two lines. The first line contains exactly one 
 positive integer $n$ indicating the length of the given sequence. The second 
-line contains $n$ integers $a_1,\dots,a_n$ saparated by blanks.
+line contains $n$ integers $a_1,\dots,a_n$ separated by blanks.
 You may assume that $n \le 24$ and $a_1,\dots,a_n\in\{0,\dots,99\}$.
 
 \textbf{\large Output Format}
